--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -1,20 +1,31 @@
 body {
+  width: calc(100vw - 60px);
   margin: 0 30px 0 30px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100vw;
 }
 h1 {
   padding: 20px 0 20px 0;
   margin: 0;
-  text-align: left;
+  text-align: left !important;
 }
 button {
   margin: 10px;
   width: 120px;
+}
+input {
+  width: 250px;
+  height: 20px;
+  padding: 5px;
+  outline: none;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .cardholder {
   width: 100%;
@@ -25,7 +36,7 @@ button {
   gap: 30px;
 }
 #card {
-  width: calc(100% / 3 - 26px);
+  width: calc(100% / 3 - 21.3px);
   min-width: 300px;
   height: 40vh;
 
